<resources>
    <string name="app_name" translatable="false">WinCovid19</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_info">Info</string>
    <string name="title_creation">Account</string>
    <string name="title_history">History</string>

    <string name="label_dashboard">Dashboard</string>
    <string name="label_info">Send Health information</string>
    <string name="label_creation">Create Account</string>
    <string name="label_history">Account History</string>

    <string name="btn_login_text">Connection</string>
    <string name="localization">Localization</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="weight_hint">Weight(Kg)</string>
    <string name="height_hint">Height(Cm)</string>
    <string name="btn_create_account">Create my account</string>
    <string name="btn_send">Send</string>
    <string name="temperature">Temperature</string>
    <string name="phone_number">Phone Number</string>
    <string name="is_diabetic">Are you diabetic ?</string>
    <string name="is_hypertensive">Are you hypertensive ?</string>
    <string name="is_asthmatic">Are you asthmatic ?</string>
    <string name="is_cardio_ischemic">Do you have cardiac ischemia ?</string>
    <string name="has_lung_disease">Do you have lung disease ?</string>
    <string name="has_kidney_disease">Do you have kidney disease ?</string>
    <string name="is_smoker">Are you smoker ?</string>
    <string name="is_return_from_travel">Are you return from travel ?</string>

    <string name="is_tired">Are you tired ?</string>
    <string name="has_dry_cough">Do you have dry cough ?</string>
    <string name="has_shortness_of_breath">Do you have shortness of breath ?</string>
    <string name="has_been_in_contact_with_infected_person">Contact with infected person ?</string>
    <string name="has_headache">Do you have headache ?</string>
    <string name="has_runny_nose">Do you have runny nose ?</string>
    <string name="has_nasal_congestion">Do you have nasal congestion ?</string>
    <string name="has_sore_throat">Do you have sore throat ?</string>
    <string name="has_muscle_pain">Do you have muscle pain ?</string>
    <string name="has_diarrhea">Do you have diarrhea ?</string>
    <string name="localization_search_hint">Town or district</string>

    <string name="key_file" translatable="false">key_file</string>

    <string name="gender">Gender</string>
    <string name="chart_legend">Temperature</string>
    <string name="chart_maximum">Maximum</string>
    <string name="chart_no_data">Make connection to display your health history</string>

    <string name="dashboard_init_text">Make connection by choosing the country code and enter your phone number. If you do not have been already registered please click create on the right bottom</string>


    <string name="date_format">MM-dd:HH</string>
    <string name="date_format2">EEE, d MMM yyyy HH:mm</string>
    <string name="connected">Your are connected</string>
    <string name="disconnection">Disconnection</string>
    <string name="close">Close</string>
    <string name="successful_creation">Your account has been successful created. Go to info to start sending your daily health information. </string>
    <string name="error_creation">Errors occur during your account creation. Retry later or Make connection</string>
    <string name="gender_error">Please choose your Gender</string>
    <string name="missing_field">Must be provided</string>
    <string name="missing_code">choose country code</string>
    <string name="connected_before">You must be connected before. please go to dashboard and connect</string>
    <string name="info_sent_error">Errors occur during processing. retry later</string>
    <string name="info_sent_success">Great ! your information has been successful sent. Go to dashboard</string>
    <string name="connection_error">Errors occur during connection. retry later or create account</string>
    <string name="server_error">Errors occur during connection to server. retry later </string>
    <string name="success_connection">Connected. Please click on info to send you daily health information.</string>

</resources>
