<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_creation"
        android:name="com.digitalink.c19.ui.account.AccountFragment"
        android:label="@string/title_creation"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.digitalink.c19.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.digitalink.c19.ui.HealthConstant.HealthConstantFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_health_constant" />
</navigation>
