<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@color/grey">


    <LinearLayout
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        >
        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_back_arrow" />
    </LinearLayout>

     <LinearLayout
         android:id="@+id/temperature_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/close">
         <TextView
             android:id="@+id/date_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.6" />
         <TextView
             android:id="@+id/temperature"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.4" />

     </LinearLayout>

        <LinearLayout
            android:id="@+id/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature_container"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
           android:layout_marginStart="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/is_tired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="true"
                android:text="@string/is_tired"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_dry_cough"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_dry_cough"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_shortness_of_breath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_shortness_of_breath"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_been_in_contact_with_infected_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_been_in_contact_with_infected_person"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_headache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_headache"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_runny_nose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_runny_nose"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_nasal_congestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_nasal_congestion"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_sore_throat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_sore_throat"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_muscle_pain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_muscle_pain"
                android:textColor="@android:color/black"
                android:clickable="false"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/has_diarrhea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inter_field_margin"
                android:checked="false"
                android:text="@string/has_diarrhea"
                android:textColor="@android:color/black"
                android:clickable="false"/>
        </LinearLayout>
</RelativeLayout>